--- a/frontend/src/app/components/systems/system-panel/system-panel.component.html
+++ b/frontend/src/app/components/systems/system-panel/system-panel.component.html
@@ -27,28 +27,92 @@
   </div>
 
   <!-- Placeholder panel -->
-  <div class="panel-block" *ngIf="!system.smartNodes.length">
+  @if (!system.smartNodes.length) {
+  <div class="panel-block">
     <div class="panel-left">
       <i class="material-icons panel-icon">info</i>
       <span>Ora puoi registrare un nodo smart nell'impianto</span>
     </div>
   </div>
+  }
 
   <!-- Smart node panel -->
-  <ng-container *ngFor="let smartNode of system.smartNodes">
-    <div class="panel-block">
+  @for (smartNode of system.smartNodes; track smartNode.id) {
+  <div class="panel-block">
+    <div
+      class="panel-left"
+      [class]="
+        smartNode.status === nodeStatus.ONLINE
+          ? 'online-node'
+          : smartNode.status === nodeStatus.OFFLINE
+          ? 'offline-node'
+          : 'deactivated-node'
+      "
+    >
+      <i class="material-icons panel-icon">hub</i>
+      <span>{{ smartNode.name }}</span>
+    </div>
+    <div class="list-item-controls">
+      <div class="buttons is-right">
+        <button class="button">
+          <span class="icon">
+            <i class="material-icons">edit</i>
+          </span>
+        </button>
+
+        @if (smartNode.isStandalone) {
+        <button class="button">
+          <span class="icon">
+            <i class="material-icons">power_settings_new</i>
+          </span>
+        </button>
+        } @if (!smartNode.simpleNodes?.length) {
+        <button
+          class="button"
+          #deleteSmartNodeBtn
+          (click)="onDeleteNode(deleteSmartNodeBtn, smartNode.id)"
+        >
+          <span class="icon">
+            <i class="material-icons">delete</i>
+          </span>
+        </button>
+        } @else {
+
+        <!-- Disabled delete button -->
+        <button
+          class="button"
+          title="Rimuovere tutti i nodi semplici prima di procedere"
+          disabled
+        >
+          <span class="icon">
+            <i class="material-icons">delete</i>
+          </span>
+        </button>
+        }
+      </div>
+    </div>
+  </div>
+
+  <!-- Simple nodes panel -->
+  @if (!smartNode.isStandalone && smartNode.simpleNodes?.length) {
+  <div class="panel-block simple-nodes-panel">
+    <!-- Simple node  -->
+    <div
+      class="simple-node-block"
+      *ngFor="let simpleNode of smartNode.simpleNodes"
+    >
       <div
         class="panel-left"
         [class]="
-          smartNode.status === nodeStatus.ONLINE
+          simpleNode.status === nodeStatus.ONLINE
             ? 'online-node'
-            : smartNode.status === nodeStatus.OFFLINE
+            : simpleNode.status === nodeStatus.OFFLINE
             ? 'offline-node'
             : 'deactivated-node'
         "
       >
-        <i class="material-icons panel-icon">hub</i>
-        <span>{{ smartNode.name }}</span>
+        <i class="material-icons panel-icon">sensors</i>
+        <span>{{ simpleNode.name }}</span>
       </div>
       <div class="list-item-controls">
         <div class="buttons is-right">
@@ -58,7 +122,7 @@
             </span>
           </button>
 
-          <button class="button" *ngIf="smartNode.isStandalone">
+          <button class="button">
             <span class="icon">
               <i class="material-icons">power_settings_new</i>
             </span>
@@ -66,84 +130,20 @@
 
           <button
             class="button"
-            *ngIf="!smartNode.simpleNodes?.length; else disabledDeleteButton"
-            #deleteSmartNodeBtn
-            (click)="onDeleteNode(deleteSmartNodeBtn, smartNode.id)"
+            #deleteSimpleNodeBtn
+            (click)="
+              onDeleteNode(deleteSimpleNodeBtn, smartNode.id, simpleNode.id)
+            "
           >
             <span class="icon">
               <i class="material-icons">delete</i>
             </span>
           </button>
-
-          <!-- Disabled delete button -->
-          <ng-template #disabledDeleteButton>
-            <button
-              class="button"
-              title="Rimuovere tutti i nodi semplici prima di procedere"
-              disabled
-            >
-              <span class="icon">
-                <i class="material-icons">delete</i>
-              </span>
-            </button>
-          </ng-template>
         </div>
       </div>
     </div>
-
-    <!-- Simple nodes panel -->
-    <div
-      class="panel-block simple-nodes-panel"
-      *ngIf="!smartNode.isStandalone && smartNode.simpleNodes?.length"
-    >
-      <!-- Simple node  -->
-      <div
-        class="simple-node-block"
-        *ngFor="let simpleNode of smartNode.simpleNodes"
-      >
-        <div
-          class="panel-left"
-          [class]="
-            simpleNode.status === nodeStatus.ONLINE
-              ? 'online-node'
-              : simpleNode.status === nodeStatus.OFFLINE
-              ? 'offline-node'
-              : 'deactivated-node'
-          "
-        >
-          <i class="material-icons panel-icon">sensors</i>
-          <span>{{ simpleNode.name }}</span>
-        </div>
-        <div class="list-item-controls">
-          <div class="buttons is-right">
-            <button class="button">
-              <span class="icon">
-                <i class="material-icons">edit</i>
-              </span>
-            </button>
-
-            <button class="button">
-              <span class="icon">
-                <i class="material-icons">power_settings_new</i>
-              </span>
-            </button>
-
-            <button
-              class="button"
-              #deleteSimpleNodeBtn
-              (click)="
-                onDeleteNode(deleteSimpleNodeBtn, smartNode.id, simpleNode.id)
-              "
-            >
-              <span class="icon">
-                <i class="material-icons">delete</i>
-              </span>
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </ng-container>
+  </div>
+  } }
   <!-- Add nodes panel -->
   <div class="panel-block">
     <button class="button" [class]="system.color" (click)="onAddNode(true)">
