--- a/frontend/src/app/components/dashboard/system-overview/system-overview.component.html
+++ b/frontend/src/app/components/dashboard/system-overview/system-overview.component.html
@@ -15,7 +15,7 @@
         <p class="title is-4 has-text-danger-dark">{{ system.name }}</p>
         <p class="subtitle is-6 has-text-danger is-flex">
           <span><i class="material-icons mr-1">info</i></span
-          >nessun nodo offline
+          >No offline nodes
         </p>
       </div>
     </div>
@@ -27,8 +27,8 @@
   </div>
   <footer class="card-footer">
     <a class="card-footer-item has-text-danger-light has-background-danger-dark"
-      >Dettagli</a
+      >Details</a
     >
-    <a class="card-footer-item has-text-danger-dark">Espandi</a>
+    <a class="card-footer-item has-text-danger-dark">Expand</a>
   </footer>
 </div>
