--- a/frontend/src/app/components/systems/system-panel/system-panel.component.html
+++ b/frontend/src/app/components/systems/system-panel/system-panel.component.html
@@ -19,7 +19,7 @@
   <!-- Search panel -->
   <div class="panel-block">
     <p class="control has-icons-left">
-      <input class="input" type="text" placeholder="Filtra per nodo" />
+      <input class="input" type="text" placeholder="Filter by node" />
       <span class="icon is-left">
         <i class="material-icons">search</i>
       </span>
@@ -31,7 +31,7 @@
   <div class="panel-block">
     <div class="panel-left">
       <i class="material-icons panel-icon">info</i>
-      <span>Ora puoi registrare un nodo smart nell'impianto</span>
+      <span>Now you can register a smart node for this place</span>
     </div>
   </div>
   }
@@ -148,7 +148,7 @@
   <div class="panel-block">
     <button class="button" [class]="system.color" (click)="onAddNode(true)">
       <span class="icon"><i class="material-icons">add_circle</i></span>
-      <span>Nodo smart</span>
+      <span>Smart node</span>
     </button>
     <button
       class="button"
@@ -161,7 +161,7 @@
       (click)="onAddNode(false)"
     >
       <span class="icon"><i class="material-icons">add_circle</i></span>
-      <span>Nodo semplice</span>
+      <span>Simple node</span>
     </button>
   </div>
 </div>
